--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -9,7 +9,7 @@
 <body onload="startTimer()" class="bg-light">
     <div class="container mt-5">
         <div class="text-center mb-4">
-            <h1 class="display-5">Quiz Biometrico</h1>
+            <h1 class="display-5">Quiz Complementi di Biometria</h1>
             <h1 class="display-5">Versione 2024</h1>
             <!-- <p id="timer" class="fs-4 text-danger"></p> -->
         </div>
